<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.yunji.sdk.MainActivity" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/action_setting_btn"
                android:text="@string/subcribe_action_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/robot_info_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_info_label" />
            <Button
                android:id="@+id/task_status_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_status_label" />


            <Button
                android:id="@+id/open_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_action_label" />

            <Button
                android:id="@+id/close_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_action_label" />

            <Button android:id="@+id/move_action_btn"
                android:text="@string/move_action_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cancel_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_action_label" />

            <Button
                android:id="@+id/force_charge_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/force_charge_label" />

            <Button
                android:id="@+id/get_all_point_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_all_point" />


            <!--<Button-->
                <!--android:id="@+id/settarget_witdh_callback_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/settarget_witdh_callback" />-->

            <!--<Button-->
                <!--android:id="@+id/settarget_noback_with_callback_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/settarget_noback_with_callback" />-->

            <!--<Button-->
                <!--android:id="@+id/flow_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/flow_label" />-->

            <!--<Button android:id="@+id/settarget_noback_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/settarget_noback_label"/>-->

            <!--<Button-->
                <!--android:id="@+id/get_lang_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/get_lang_label" />-->

            <Button
                android:id="@+id/set_lang_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_lang_label" />

            <!--<Button-->
                <!--android:id="@+id/get_volume_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/get_volume_label" />-->


            <Button
                android:id="@+id/set_volume_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_volume_label" />

            <!--<Button-->
                <!--android:id="@+id/get_hotel_id_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/get_hotel_id" />-->

            <!--<Button-->
                <!--android:id="@+id/get_ad_enable_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/get_ad_enabel" />-->

            <Button
                android:id="@+id/set_ad_enable_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_ad_enabel" />

            <!--<Button-->
                <!--android:id="@+id/get_robot_no_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/get_robot_no" />-->

            <!--<Button-->
                <!--android:id="@+id/get_version_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/get_version_label" />-->

            <Button
                android:id="@+id/pay_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_label" />

            <!--<Button-->
                <!--android:id="@+id/start_cruise_btn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/start_cruise_label" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>